--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.1",
+    "@supabase/supabase-js": "^2.46.1",
     "@tabler/icons-react": "^3.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
+    "gridfs-stream": "^1.1.1",
     "gsap": "^3.12.5",
     "next": "15.0.2",
+    "next-connect": "^1.0.0",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.1",
@@ -23,7 +27,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/gridfs-stream": "^0.5.39",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
