--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.0.2",
     "next-connect": "^1.0.0",
     "pg": "^8.13.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.1",
@@ -31,6 +32,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
