--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tabler/icons-react": "^3.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.11.11",
     "gridfs-stream": "^1.1.1",
     "gsap": "^3.12.5",
@@ -28,6 +29,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/gridfs-stream": "^0.5.39",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
