--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.1",
     "@supabase/supabase-js": "^2.46.1",
     "@tabler/icons-react": "^3.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
-    "formidable": "^3.5.2",
     "framer-motion": "^11.11.11",
-    "gridfs-stream": "^1.1.1",
     "gsap": "^3.12.5",
     "next": "15.0.2",
     "next-connect": "^1.0.0",
-    "pg": "^8.13.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,8 +30,6 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
-    "@types/formidable": "^3.4.5",
-    "@types/gridfs-stream": "^0.5.39",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
