--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
+    "monaco-themes": "^0.4.4",
+    "mongoose": "^8.8.0",
     "next": "15.0.2",
     "next-connect": "^1.0.0",
     "qrcode": "^1.5.4",
@@ -26,6 +28,7 @@
     "react-dropzone": "^14.3.1",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
