--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
+    "jszip": "^3.10.1",
     "monaco-themes": "^0.4.4",
     "mongoose": "^8.8.0",
     "next": "15.0.2",
@@ -25,7 +27,7 @@
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.1",
+    "react-dropzone": "^14.3.5",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
