--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@supabase/supabase-js": "^2.46.1",
     "@tabler/icons-react": "^3.21.0",
+    "@tiptap/extension-highlight": "^2.9.1",
+    "@tiptap/extension-underline": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
