--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "jszip": "^3.10.1",
     "monaco-themes": "^0.4.4",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
+    "motion": "^11.11.17",
     "next": "15.0.2",
     "next-connect": "^1.0.0",
     "qrcode": "^1.5.4",
