--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "@tabler/icons-react": "^3.21.0",
     "@tiptap/extension-highlight": "^2.9.1",
+    "@tiptap/extension-link": "^2.9.1",
     "@tiptap/extension-underline": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
