--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "fabric": "^6.5.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/fabric": "^5.3.9",
     "@types/file-saver": "^2.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20",
