--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -43,6 +44,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-toastify": "^10.0.6",
+    "shadcn": "^2.1.6",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
