--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "monaco-themes": "^0.4.4",
     "mongoose": "^8.8.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "next-connect": "^1.0.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
