--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@supabase/supabase-js": "^2.46.1",
-    "@tabler/icons-react": "^3.21.0",
+    "@tabler/icons-react": "^3.23.0",
     "@tiptap/extension-highlight": "^2.9.1",
     "@tiptap/extension-underline": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
@@ -29,7 +29,7 @@
     "crypto-js": "^4.2.0",
     "fabric": "^6.5.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "gsap": "^3.12.5",
     "jszip": "^3.10.1",
     "monaco-themes": "^0.4.4",
@@ -43,10 +43,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
     "shadcn": "^2.1.6",
     "simplex-noise": "^4.0.3",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
