--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "fabric": "^6.5.3",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
@@ -36,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-icons": "^5.4.0",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
